chore: Upgrading GameService to be able to use java.util.Collectors